# easifish-spots-tools

./: Dockerfile  README.md  conda-env.yml  pyproject.toml
configs/: dask-config.yml  fishspots_config.yml  logging_config.ini
src/easifish_spots_tools/: cli.py  generate_spots_image.py  labeled_spots_counts.py  labeled_spots_props.py  main_estimate_psf.py  main_spot_extraction.py  post_rs_fish.py
src/easifish_spots_tools/io_utils/: __init__.py  imgio.py  read_utils.py  write_utils.py
src/easifish_spots_tools/spot_detection/: __init__.py  configure_fishspots.py  distributed_spot_detection.py
src/easifish_spots_tools/utils/: configure_dask.py  configure_logging.py
