[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "easifish-spots-tools"
version = "0.3.0"
description = "EASI-FISH pipeline tools for detecting or processing spots "
license = "BSD-3-Clause"
requires-python = ">=3.12"
dependencies = [
    "numpy>2,<3",
    "ome-zarr-models==1.3",
    "pydantic==2.12.4",
    "pyyaml",
    "tornado",
    "zarr>3,<4",
    "zarr-tools @ git+https://github.com/JaneliaSciComp/zarr-tools.git@f5bb4c8",
]

[tool.setuptools.packages.find]
where = ["src"]
